Well simulate changes

--- a/notebooks/Well Simulate.ipynb
+++ b/notebooks/Well Simulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,57 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anton/.opentrons/deck_calibration.json not found. Loading defaults\n",
-      "/Users/anton/.opentrons/robot_settings.json not found. Loading defaults\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading json containers...\n",
-      "Json container file load complete, listing database\n",
-      "Found 0 containers to add. Starting migration...\n",
-      "Database migration complete!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from opentrons.simulate import simulate, format_runlog"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anton/.opentrons/deck_calibration.json not found. Loading defaults\n",
-      "/Users/anton/.opentrons/robot_settings.json not found. Loading defaults\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read the file\n",
     "# protocol_file = open('../protocols/station-C-qpcr-map.py')\n",
-    "protocol_file = open('../experiments/20200326-lod-study-2/station-C-qpcr-map.py')\n",
+    "protocol_file = open('../experiments/20200328/station-C-qpcr-map.py')\n",
     "# simulate() the protocol, keeping the runlog\n",
     "runlog, _bundle = simulate(protocol_file, custom_labware_paths=['../labware/'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -109,273 +81,552 @@
       "Applied Biosystems 96 Aluminum Block 200 µL on Temperature Module on 4\n",
       "A1\n",
       "  A1\n",
-      "  A1\n",
       "  Reaction\n",
       "\n",
       "B1\n",
-      "  B1\n",
       "  B1\n",
       "  Reaction\n",
       "\n",
       "C1\n",
       "  Reaction\n",
       "  C1\n",
-      "  C1\n",
       "\n",
       "D1\n",
-      "  D1\n",
       "  Reaction\n",
       "  D1\n",
       "\n",
       "E1\n",
       "  Reaction\n",
       "  E1\n",
-      "  E1\n",
       "\n",
       "F1\n",
-      "  F1\n",
       "  Reaction\n",
       "  F1\n",
       "\n",
       "G1\n",
-      "  G1\n",
       "  G1\n",
       "  Reaction\n",
       "\n",
       "H1\n",
       "  H1\n",
       "  Reaction\n",
-      "  H1\n",
       "\n",
       "A2\n",
-      "  A2\n",
       "  A2\n",
       "  Reaction\n",
       "\n",
       "B2\n",
-      "  B2\n",
       "  B2\n",
       "  Reaction\n",
       "\n",
       "C2\n",
       "  Reaction\n",
       "  C2\n",
-      "  C2\n",
       "\n",
       "D2\n",
       "  Reaction\n",
       "  D2\n",
-      "  D2\n",
       "\n",
       "E2\n",
-      "  E2\n",
       "  E2\n",
       "  Reaction\n",
       "\n",
       "F2\n",
       "  Reaction\n",
       "  F2\n",
-      "  F2\n",
       "\n",
       "G2\n",
-      "  G2\n",
       "  G2\n",
       "  Reaction\n",
       "\n",
       "H2\n",
-      "  H2\n",
       "  H2\n",
       "  Reaction\n",
       "\n",
       "A3\n",
       "  Reaction\n",
       "  A3\n",
-      "  A3\n",
       "\n",
       "B3\n",
       "  Reaction\n",
-      "  B3\n",
       "  B3\n",
       "\n",
       "C3\n",
       "  Reaction\n",
       "  C3\n",
-      "  C3\n",
       "\n",
       "D3\n",
-      "  D3\n",
       "  D3\n",
       "  Reaction\n",
       "\n",
       "E3\n",
       "  E3\n",
       "  Reaction\n",
-      "  E3\n",
       "\n",
       "F3\n",
       "  Reaction\n",
       "  F3\n",
-      "  F3\n",
       "\n",
       "G3\n",
-      "  G3\n",
       "  G3\n",
       "  Reaction\n",
       "\n",
       "H3\n",
       "  Reaction\n",
       "  H3\n",
-      "  H3\n",
+      "\n",
+      "A4\n",
+      "  A4\n",
+      "  Reaction\n",
+      "\n",
+      "B4\n",
+      "  Reaction\n",
+      "  B4\n",
+      "\n",
+      "C4\n",
+      "  Reaction\n",
+      "  C4\n",
+      "\n",
+      "D4\n",
+      "  D4\n",
+      "  Reaction\n",
+      "\n",
+      "E4\n",
+      "  Reaction\n",
+      "  E4\n",
+      "\n",
+      "F4\n",
+      "  F4\n",
+      "  Reaction\n",
+      "\n",
+      "G4\n",
+      "  G4\n",
+      "  Reaction\n",
+      "\n",
+      "H4\n",
+      "  H4\n",
+      "  Reaction\n",
+      "\n",
+      "A5\n",
+      "  A5\n",
+      "  Reaction\n",
+      "\n",
+      "B5\n",
+      "  Reaction\n",
+      "  B5\n",
+      "\n",
+      "C5\n",
+      "  C5\n",
+      "  Reaction\n",
+      "\n",
+      "D5\n",
+      "  Reaction\n",
+      "  D5\n",
+      "\n",
+      "E5\n",
+      "  Reaction\n",
+      "  E5\n",
+      "\n",
+      "F5\n",
+      "  Reaction\n",
+      "  F5\n",
+      "\n",
+      "G5\n",
+      "  Reaction\n",
+      "  G5\n",
+      "\n",
+      "H5\n",
+      "  Reaction\n",
+      "  H5\n",
       "\n",
       "A6\n",
-      "  Reaction\n",
-      "  Water\n",
       "  A6\n",
+      "  Reaction\n",
       "\n",
       "B6\n",
       "  B6\n",
       "  Reaction\n",
-      "  Water\n",
       "\n",
       "C6\n",
-      "  Reaction\n",
-      "  Water\n",
       "  C6\n",
+      "  Reaction\n",
+      "\n",
+      "D6\n",
+      "  Reaction\n",
+      "  D6\n",
+      "\n",
+      "E6\n",
+      "  Reaction\n",
+      "  E6\n",
       "\n",
       "F6\n",
-      "  Control RNA\n",
       "  Reaction\n",
       "  F6\n",
       "\n",
       "G6\n",
-      "  Control RNA\n",
       "  Reaction\n",
       "  G6\n",
       "\n",
       "H6\n",
-      "  Control RNA\n",
-      "  Reaction\n",
       "  H6\n",
+      "  Reaction\n",
+      "\n",
+      "A7\n",
+      "  A1\n",
+      "  Endogenous\n",
+      "\n",
+      "B7\n",
+      "  B1\n",
+      "  Endogenous\n",
+      "\n",
+      "C7\n",
+      "  Endogenous\n",
+      "  C1\n",
+      "\n",
+      "D7\n",
+      "  Endogenous\n",
+      "  D1\n",
+      "\n",
+      "E7\n",
+      "  Endogenous\n",
+      "  E1\n",
+      "\n",
+      "G7\n",
+      "  Negative\n",
+      "  Reaction\n",
+      "\n",
+      "H7\n",
+      "  Negative\n",
+      "  Endogenous\n",
+      "\n",
+      "A8\n",
+      "  Endogenous\n",
+      "  F1\n",
+      "\n",
+      "B8\n",
+      "  G1\n",
+      "  Endogenous\n",
+      "\n",
+      "C8\n",
+      "  H1\n",
+      "  Endogenous\n",
+      "\n",
+      "D8\n",
+      "  A2\n",
+      "  Endogenous\n",
+      "\n",
+      "E8\n",
+      "  B2\n",
+      "  Endogenous\n",
+      "\n",
+      "G8\n",
+      "  Negative\n",
+      "  Reaction\n",
+      "\n",
+      "H8\n",
+      "  Negative\n",
+      "  Endogenous\n",
+      "\n",
+      "A9\n",
+      "  Endogenous\n",
+      "  D6\n",
+      "\n",
+      "B9\n",
+      "  Endogenous\n",
+      "  E6\n",
+      "\n",
+      "C9\n",
+      "  Endogenous\n",
+      "  F6\n",
+      "\n",
+      "D9\n",
+      "  Endogenous\n",
+      "  G6\n",
+      "\n",
+      "E9\n",
+      "  H6\n",
+      "  Endogenous\n",
+      "\n",
+      "G9\n",
+      "  Negative\n",
+      "  Reaction\n",
+      "\n",
+      "H9\n",
+      "  Negative\n",
+      "  Endogenous\n",
       "\n",
       "A10\n",
-      "  A10\n",
       "  Reaction\n",
       "  PCD 1\n",
       "\n",
       "B10\n",
       "  Reaction\n",
       "  PCD 2\n",
-      "  B10\n",
       "\n",
       "C10\n",
-      "  C10\n",
       "  PCD 3\n",
       "  Reaction\n",
       "\n",
       "D10\n",
       "  Reaction\n",
-      "  D10\n",
       "  PCD 4\n",
       "\n",
       "E10\n",
       "  PCD 5\n",
       "  Reaction\n",
-      "  E10\n",
       "\n",
       "F10\n",
       "  PCD 6\n",
       "  Reaction\n",
-      "  F10\n",
       "\n",
       "G10\n",
-      "  G10\n",
       "  Reaction\n",
       "  PCD 7\n",
       "\n",
       "H10\n",
       "  PCD 8\n",
       "  Reaction\n",
-      "  H10\n",
       "\n",
       "A11\n",
-      "  A11\n",
       "  Reaction\n",
       "  PCD 1\n",
       "\n",
       "B11\n",
-      "  B11\n",
       "  Reaction\n",
       "  PCD 2\n",
       "\n",
       "C11\n",
-      "  C11\n",
       "  PCD 3\n",
       "  Reaction\n",
       "\n",
       "D11\n",
-      "  D11\n",
       "  Reaction\n",
       "  PCD 4\n",
       "\n",
       "E11\n",
       "  PCD 5\n",
       "  Reaction\n",
-      "  E11\n",
       "\n",
       "F11\n",
       "  PCD 6\n",
       "  Reaction\n",
-      "  F11\n",
       "\n",
       "G11\n",
-      "  G11\n",
       "  Reaction\n",
       "  PCD 7\n",
       "\n",
       "H11\n",
-      "  H11\n",
       "  PCD 8\n",
       "  Reaction\n",
       "\n",
       "A12\n",
       "  Reaction\n",
-      "  A12\n",
       "  PCD 1\n",
       "\n",
       "B12\n",
-      "  B12\n",
       "  Reaction\n",
       "  PCD 2\n",
       "\n",
       "C12\n",
       "  PCD 3\n",
       "  Reaction\n",
-      "  C12\n",
       "\n",
       "D12\n",
-      "  D12\n",
       "  Reaction\n",
       "  PCD 4\n",
       "\n",
       "E12\n",
       "  PCD 5\n",
       "  Reaction\n",
-      "  E12\n",
       "\n",
       "F12\n",
-      "  F12\n",
       "  PCD 6\n",
       "  Reaction\n",
       "\n",
       "G12\n",
       "  Reaction\n",
       "  PCD 7\n",
-      "  G12\n",
       "\n",
       "H12\n",
       "  PCD 8\n",
       "  Reaction\n",
-      "  H12\n",
+      "\n",
+      "\n",
+      "\n",
+      "Elution Plate on 1\n",
+      "A1\n",
+      "  A1\n",
+      "\n",
+      "B1\n",
+      "  B1\n",
+      "\n",
+      "C1\n",
+      "  C1\n",
+      "\n",
+      "D1\n",
+      "  D1\n",
+      "\n",
+      "E1\n",
+      "  E1\n",
+      "\n",
+      "F1\n",
+      "  F1\n",
+      "\n",
+      "G1\n",
+      "  G1\n",
+      "\n",
+      "H1\n",
+      "  H1\n",
+      "\n",
+      "A2\n",
+      "  A2\n",
+      "\n",
+      "B2\n",
+      "  B2\n",
+      "\n",
+      "C2\n",
+      "  C2\n",
+      "\n",
+      "D2\n",
+      "  D2\n",
+      "\n",
+      "E2\n",
+      "  E2\n",
+      "\n",
+      "F2\n",
+      "  F2\n",
+      "\n",
+      "G2\n",
+      "  G2\n",
+      "\n",
+      "H2\n",
+      "  H2\n",
+      "\n",
+      "A3\n",
+      "  A3\n",
+      "\n",
+      "B3\n",
+      "  B3\n",
+      "\n",
+      "C3\n",
+      "  C3\n",
+      "\n",
+      "D3\n",
+      "  D3\n",
+      "\n",
+      "E3\n",
+      "  E3\n",
+      "\n",
+      "F3\n",
+      "  F3\n",
+      "\n",
+      "G3\n",
+      "  G3\n",
+      "\n",
+      "H3\n",
+      "  H3\n",
+      "\n",
+      "A4\n",
+      "  A4\n",
+      "\n",
+      "B4\n",
+      "  B4\n",
+      "\n",
+      "C4\n",
+      "  C4\n",
+      "\n",
+      "D4\n",
+      "  D4\n",
+      "\n",
+      "E4\n",
+      "  E4\n",
+      "\n",
+      "F4\n",
+      "  F4\n",
+      "\n",
+      "G4\n",
+      "  G4\n",
+      "\n",
+      "H4\n",
+      "  H4\n",
+      "\n",
+      "A5\n",
+      "  A5\n",
+      "\n",
+      "B5\n",
+      "  B5\n",
+      "\n",
+      "C5\n",
+      "  C5\n",
+      "\n",
+      "D5\n",
+      "  D5\n",
+      "\n",
+      "E5\n",
+      "  E5\n",
+      "\n",
+      "F5\n",
+      "  F5\n",
+      "\n",
+      "G5\n",
+      "  G5\n",
+      "\n",
+      "H5\n",
+      "  H5\n",
+      "\n",
+      "A6\n",
+      "  A6\n",
+      "\n",
+      "B6\n",
+      "  B6\n",
+      "\n",
+      "C6\n",
+      "  C6\n",
+      "\n",
+      "D6\n",
+      "  D6\n",
+      "\n",
+      "E6\n",
+      "  E6\n",
+      "\n",
+      "F6\n",
+      "  F6\n",
+      "\n",
+      "G6\n",
+      "  G6\n",
+      "\n",
+      "H6\n",
+      "  H6\n",
+      "\n",
+      "\n",
+      "\n",
+      "Opentrons 24 Tube Rack with NEST 1.5 mL Snapcap on 5\n",
+      "D1\n",
+      "  PCD 6\n",
+      "\n",
+      "D2\n",
+      "  PCD 5\n",
+      "\n",
+      "B3\n",
+      "  Negative\n",
+      "\n",
+      "D3\n",
+      "  PCD 4\n",
+      "\n",
+      "D4\n",
+      "  PCD 3\n",
+      "\n",
+      "C5\n",
+      "  PCD 8\n",
+      "\n",
+      "D5\n",
+      "  PCD 2\n",
+      "\n",
+      "C6\n",
+      "  PCD 7\n",
+      "\n",
+      "D6\n",
+      "  PCD 1\n",
       "\n",
       "\n",
       "\n"
@@ -384,12 +635,12 @@
    ],
    "source": [
     "REAGENT_LOCATIONS = {\n",
-    "    'Endogenous': 'A1',\n",
-    "    'Reaction': 'A2',\n",
-    "    'Standard': 'A3',\n",
-    "    'Water': 'A4',\n",
-    "    'Control RNA': 'C1',\n",
-    "    'Control RNA 2': 'C2',\n",
+    "    'Reaction': 'A1',\n",
+    "    'Endogenous': 'B1',\n",
+    "    'Standard': 'B2',\n",
+    "    'Water': 'B3',\n",
+    "    'Negative': 'B3', # Synonym for water\n",
+    "    'IEC RNA': 'C1',\n",
     "    'PCD 8': 'C5',\n",
     "    'PCD 7': 'C6',\n",
     "    'PCD 6': 'D1',\n",
@@ -409,7 +660,7 @@
     "    for well_name, well in sorted(plate.items(), key=lambda item: (int(item[0][1:]), item[0][0])):\n",
     "        print(well_name)\n",
     "        for source_plate, source_well in well:\n",
-    "            if source_plate == 'Opentrons 96 Well Aluminum Block with NEST Well Plate 100 µL on Temperature Module on 4':\n",
+    "            if source_plate == 'Applied Biosystems 96 Aluminum Block 200 µL on Temperature Module on 4':\n",
     "                continue\n",
     "                \n",
     "            if source_plate == 'Opentrons 24 Tube Rack with NEST 1.5 mL Snapcap on 5':\n",
